--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -22,8 +22,9 @@
 \newacronym{lm}{LM}{language model}
 \newacronym{oov}{OOV}{out-of-vocabulary}
 \newacronym{bpe}{BPE}{byte-pair encoding}
-\newacronym{nat}{NAT}{non-autoregressive \myglsentry{nmt}}
+\newacronym{ar}{AR}{autoregressive}
 \newacronym{nar}{NAR}{non-autoregressive}
+\newacronym{nat}{NAT}{non-autoregressive \myglsentry{nmt}}
 \newacronym{ctc}{CTC}{connectionist temporal classification}
 \newacronym{npd}{NPD}{noisy parallel decoding}
 \newacronym{bleu}{BLEU}{bilingual evaluation understudy}
